src/objects/Opportunity_Screening__c.object
<CustomObject>
    <description>R4 v1 - Opportunity Screening custom object to capture the Opportunity Qualification status</description>
    <fields>
        <fullName>ABB_Location__c</fullName>
        <formula>Opportunity__r.ABB_Location__r.Name</formula>
        <label>ABB Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Entry_Criteria_Met__c</fullName>
        <description>R5 - User can identify if the record Qualifies for an Approval Process</description>
        <formula>IF( 
OR(
ISBLANK(Division__c), 
ISBLANK(Country__c), 
ISBLANK(Local_Business_Unit__c), 
ISBLANK(Local_Product_Group__c ), 
Division__c &lt;&gt; &apos;PG&apos;,
ISPICKVAL(Gate_Status__c,&apos;&apos;),
OR(ISPICKVAL(Approval_Status__c,&apos;Submitted&apos;),ISPICKVAL(Approval_Status__c,&apos;Approved&apos;))
), 
&apos;NO&apos;,&apos;YES&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apttus Approval Entry Criteria Met</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Opportunity__r.Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>created for R5 AWA</description>
        <formula>LEFT(Opportunity__r.ABB_Location__r.Company__c , 2)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>LEFT(TEXT(Opportunity__r.ABB_Location__r.DIV__c),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GATE1_Completeness__c</fullName>
        <formula>(IF(OR(TEXT(Gate1_Will_EndUser_A__c) = &quot;&quot;, TEXT(Gate1_Will_EndUser_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate1_Will_Project_Development_A__c) = &quot;&quot;, TEXT(Gate1_Will_Project_Development_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate1_Will_Business_value_A__c) = &quot;&quot;, TEXT(Gate1_Will_Business_value_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate1_Fit_Strategy1_A__c) = &quot;&quot;, TEXT(Gate1_Fit_Strategy1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate1_Fit_Strategy2_A__c) = &quot;&quot;, TEXT(Gate1_Fit_Strategy2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate1_Fit_Resources_A__c) = &quot;&quot;, TEXT(Gate1_Fit_Resources_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate1_Fit_Safe_Island_A__c) = &quot;&quot;, TEXT(Gate1_Fit_Safe_Island_A__c) =&quot;Unknown&quot;),0,1)+
IF(Safe_Island_Classification__c = &quot;Please fill out required in formation in Opportunity Screening sheet&quot;,0,1)+
IF(OR(TEXT(Gate1_Get_Customer_Relation1_A__c) = &quot;&quot;, TEXT(Gate1_Get_Customer_Relation1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate1_Get_Customer_Relation2_A__c) = &quot;&quot;, TEXT(Gate1_Get_Customer_Relation2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate1_Get_Competition1_A__c) = &quot;&quot;, TEXT(Gate1_Get_Competition1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate1_Get_Competition2_A__c) = &quot;&quot;, TEXT(Gate1_Get_Competition2_A__c) =&quot;Unknown&quot;),0,1))/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GATE1_FIT_CategoryScore__c</fullName>
        <formula>(((IF(TEXT(Gate1_Fit_Strategy1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Fit_Strategy1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Fit_Strategy1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Fit_Strategy1_A__c) = &quot;Disagree&quot;,25,0))))*(70/100))+ 
(IF(TEXT(Gate1_Fit_Strategy2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Fit_Strategy2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Fit_Strategy2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Fit_Strategy2_A__c) = &quot;Disagree&quot;,25,0))))*(30/100)))*(40/100))+ 
((IF(OR(TEXT(Gate1_Fit_Resources_A__c)=&quot;&quot;,TEXT(Gate1_Fit_Resources_A__c)=&quot;Unknown&quot;,TEXT(Gate1_Fit_Resources_A__c)=&quot;No&quot;),0,100)*1)*(20/100))+ 
(((IF(TEXT(Gate1_Fit_Safe_Island_A__c)=&quot;Yes:Safe Island Classification in Place&quot;,100,IF(TEXT(Gate1_Fit_Safe_Island_A__c)=&quot;No:Safe Island Classification not in Place&quot;,25,0))*(50/100))+ 
(IF(Safe_Island_Classification__c=&quot;High-focus Customer&quot;,100,IF(Safe_Island_Classification__c =&quot;Focus customer with required response&quot;,50,0))*(50/100)))*(40/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_FIT_CategoryScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE1_FIT_ResourcesGroupScore__c</fullName>
        <formula>(IF(OR(TEXT(Gate1_Fit_Resources_A__c)=&quot;&quot;,TEXT(Gate1_Fit_Resources_A__c)=&quot;Unknown&quot;,TEXT(Gate1_Fit_Resources_A__c)=&quot;No&quot;),0,100)*1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_FIT_ResourcesGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE1_FIT_SafeIslandGroupScore__c</fullName>
        <formula>(IF(TEXT(Gate1_Fit_Safe_Island_A__c)=&quot;Yes:Safe Island Classification in Place&quot;,100,IF(TEXT(Gate1_Fit_Safe_Island_A__c)=&quot;No:Safe Island Classification not in Place&quot;,25,0))*(50/100))+ 
(IF(Safe_Island_Classification__c=&quot;High-focus Customer&quot;,100,IF(Safe_Island_Classification__c =&quot;Focus customer with required response&quot;,50,0))*(50/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_FIT_SafeIslandGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE1_FIT_StrategyGroupScore__c</fullName>
        <formula>(IF(TEXT(Gate1_Fit_Strategy1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Fit_Strategy1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Fit_Strategy1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Fit_Strategy1_A__c) = &quot;Disagree&quot;,25,0))))*(70/100))+ 
(IF(TEXT(Gate1_Fit_Strategy2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Fit_Strategy2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Fit_Strategy2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Fit_Strategy2_A__c) = &quot;Disagree&quot;,25,0))))*(30/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_FIT_StrategyGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE1_GET_CategoryScore__c</fullName>
        <formula>(((IF(TEXT(Gate1_Get_Customer_Relation1_A__c)=&quot;Very Good&quot;,100,IF(TEXT(Gate1_Get_Customer_Relation1_A__c)=&quot;Good&quot;,75, IF(TEXT(Gate1_Get_Customer_Relation1_A__c)=&quot;Difficult&quot;,25, 0)))*(50/100))+
(IF(TEXT(Gate1_Get_Customer_Relation2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Get_Customer_Relation2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Get_Customer_Relation2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Get_Customer_Relation2_A__c) = &quot;Disagree&quot;,25,0))))*(50/100)))*(30/100))+
(((IF(TEXT(Gate1_Get_Competition1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Get_Competition1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Get_Competition1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Get_Competition1_A__c) = &quot;Disagree&quot;,25,0))))*(90/100))+
(IF(TEXT(Gate1_Get_Competition2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Get_Competition2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Get_Competition2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Get_Competition2_A__c) = &quot;Disagree&quot;,25,0))))*(10/100)))*(70/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_GET_CategoryScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE1_GET_CompetitionGroupScore__c</fullName>
        <formula>(IF(TEXT(Gate1_Get_Competition1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Get_Competition1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Get_Competition1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Get_Competition1_A__c) = &quot;Disagree&quot;,25,0))))*(90/100))+ 
(IF(TEXT(Gate1_Get_Competition2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Get_Competition2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Get_Competition2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Get_Competition2_A__c) = &quot;Disagree&quot;,25,0))))*(10/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_GET_CompetitionGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE1_GET_CustomerRelationGroupScore__c</fullName>
        <formula>(IF(TEXT(Gate1_Get_Customer_Relation1_A__c)=&quot;Very Good&quot;,100,IF(TEXT(Gate1_Get_Customer_Relation1_A__c)=&quot;Good&quot;,75, IF(TEXT(Gate1_Get_Customer_Relation1_A__c)=&quot;Difficult&quot;,25, 0)))*(50/100))+ 
(IF(TEXT(Gate1_Get_Customer_Relation2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Get_Customer_Relation2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Get_Customer_Relation2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Get_Customer_Relation2_A__c) = &quot;Disagree&quot;,25,0))))*(50/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_GET_CustomerRelationGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE1_WILL_BusinessGroupScore__c</fullName>
        <formula>(IF(TEXT(Gate1_Will_Business_value_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Will_Business_value_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Will_Business_value_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Will_Business_value_A__c) = &quot;Disagree&quot;,25,0))))*1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_WILL_BusinessGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE1_WILL_CategoryScore__c</fullName>
        <formula>((IF(TEXT(Gate1_Will_EndUser_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Will_EndUser_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Will_EndUser_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Will_EndUser_A__c) = &quot;Disagree&quot;,25,0))))*1)*(40/100))+
((IF(TEXT(Gate1_Will_Project_Development_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Will_Project_Development_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Will_Project_Development_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Will_Project_Development_A__c) = &quot;Disagree&quot;,25,0))))*1)*(50/100))+
((IF(TEXT(Gate1_Will_Business_value_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Will_Business_value_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Will_Business_value_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Will_Business_value_A__c) = &quot;Disagree&quot;,25,0))))*1)*(10/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_WILL_CategoryScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE1_WILL_EndUserGroupScore__c</fullName>
        <formula>(IF(TEXT(Gate1_Will_EndUser_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Will_EndUser_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Will_EndUser_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Will_EndUser_A__c) = &quot;Disagree&quot;,25,0))))*1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_WILL_EndUserGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE1_WILL_ProjectDevelopGroupScore__c</fullName>
        <formula>(IF(TEXT(Gate1_Will_Project_Development_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate1_Will_Project_Development_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate1_Will_Project_Development_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate1_Will_Project_Development_A__c) = &quot;Disagree&quot;,25,0))))*1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE1_WILL_ProjectDevelopGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_Completeness__c</fullName>
        <formula>(IF(OR(TEXT(Gate2_Will_EndUser1_A__c) = &quot;&quot;, TEXT(Gate2_Will_EndUser1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Will_EndUser2_A__c) = &quot;&quot;, TEXT(Gate2_Will_EndUser2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Will_Project_Development1_A__c) = &quot;&quot;, TEXT(Gate2_Will_Project_Development1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Will_Project_Development2_A__c) = &quot;&quot;, TEXT(Gate2_Will_Project_Development2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Will_Business_value_and_bank1_A__c) = &quot;&quot;, TEXT(Gate2_Will_Business_value_and_bank1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Will_Business_value_and_bank2_A__c) = &quot;&quot;, TEXT(Gate2_Will_Business_value_and_bank2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Will_Business_value_and_bank3_A__c) = &quot;&quot;, TEXT(Gate2_Will_Business_value_and_bank3_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Strategy1_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Strategy1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Strategy2_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Strategy2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Commercial1_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Commercial1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Commercial2_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Commercial2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Commercial3_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Commercial3_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Commercial4_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Commercial4_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Resources1_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Resources1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Resources2_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Resources2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Resources3_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Resources3_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Resources4_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Resources4_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Resources5_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Resources5_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_FIT_Safe_Island_A__c) = &quot;&quot;, TEXT(Gate2_FIT_Safe_Island_A__c) =&quot;Unknown&quot;),0,1)+
IF(Gate2_Fit_Safe_Island_Classification_A__c = &quot;Please fill out required in formation in Opportunity Screening sheet&quot;,0,1)+
IF(OR(TEXT(Gate2_Fit_Risk1_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Risk1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Risk2_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Risk2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Fit_Risk3_A__c) = &quot;&quot;, TEXT(Gate2_Fit_Risk3_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Get_Customer_relation1_A__c) = &quot;&quot;, TEXT(Gate2_Get_Customer_relation1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Get_Customer_relation2_A__c) = &quot;&quot;, TEXT(Gate2_Get_Customer_relation2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Get_Competition1_A__c) = &quot;&quot;, TEXT(Gate2_Get_Competition1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Get_Competition2_A__c) = &quot;&quot;, TEXT(Gate2_Get_Competition2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Get_Competition3_A__c) = &quot;&quot;, TEXT(Gate2_Get_Competition3_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Get_Competition4_A__c) = &quot;&quot;, TEXT(Gate2_Get_Competition4_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Get_Competitive_edge1_A__c) = &quot;&quot;, TEXT(Gate2_Get_Competitive_edge1_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Get_Competitive_edge2_A__c) = &quot;&quot;, TEXT(Gate2_Get_Competitive_edge2_A__c) =&quot;Unknown&quot;),0,1)+
IF(OR(TEXT(Gate2_Get_Competitive_edge3_A__c) = &quot;&quot;, TEXT(Gate2_Get_Competitive_edge3_A__c) =&quot;Unknown&quot;),0,1))/32</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manual_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5- When no match for a country is found in any AWA approval process, this checkbox will be used to allow PGGA, PGGI, PGGS and PAPG approvals.</description>
        <label>Manual Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GATE2_FIT_CategoryScore__c</fullName>
        <formula>IF(OR(Gate2_Fit_Safe_Island_Classification_A__c=&quot;Non-focus Customer&quot;,IF(TEXT(Gate2_Fit_Commercial1_A__c)=&quot;Exceeded&quot;,100,IF(TEXT(Gate2_Fit_Commercial1_A__c)=&quot;Fulfilled&quot;,100,0))=0,IF(TEXT(Gate2_Fit_Commercial2_A__c)=&quot;Exceeded&quot;,100,IF(TEXT(Gate2_Fit_Commercial2_A__c)=&quot;Fulfilled&quot;,100,0))=0,IF(TEXT(Gate2_Fit_Commercial3_A__c)=&quot;Exceeded&quot;,100,IF(TEXT(Gate2_Fit_Commercial3_A__c)=&quot;Fulfilled&quot;,100,0))=0),0,(GATE2_FIT_StrategyGS__c*(10/100) + GATE2_FIT_CommercialGroupScore__c*(30/100) + GATE2_FIT_ResourcesGroupScore__c*(10/100) + GATE2_FIT_SafeIslandGS__c*(20/100) + GATE2_FIT_RiskGroupScore__c*(30/100)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_FIT_CategoryScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_FIT_CommercialGroupScore__c</fullName>
        <formula>(IF(TEXT(Gate2_Fit_Commercial1_A__c)=&quot;Exceeded&quot;,100,IF(TEXT(Gate2_Fit_Commercial1_A__c)=&quot;Fulfilled&quot;,100,0))*(25/100))+ 
(IF(TEXT(Gate2_Fit_Commercial2_A__c)=&quot;Exceeded&quot;,100,IF(TEXT(Gate2_Fit_Commercial2_A__c)=&quot;Fulfilled&quot;,100,0))*(25/100))+ 
(IF(TEXT(Gate2_Fit_Commercial3_A__c)=&quot;Exceeded&quot;,100,IF(TEXT(Gate2_Fit_Commercial3_A__c)=&quot;Fulfilled&quot;,100,0))*(25/100))+
(IF(TEXT(Gate2_Fit_Commercial4_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Fit_Commercial4_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Fit_Commercial4_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Fit_Commercial4_A__c)=&quot;Disagree&quot;,25,0))))*(25/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_FIT_CommercialGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_FIT_ResourcesGroupScore__c</fullName>
        <formula>((IF(OR(TEXT(Gate2_Fit_Resources1_A__c)=&quot;&quot;,TEXT(Gate2_Fit_Resources1_A__c)=&quot;Unknown&quot;,TEXT(Gate2_Fit_Resources1_A__c)=&quot;No&quot;),0,100)*(20/100))+ 
(IF(TEXT(Gate2_Fit_Resources2_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Fit_Resources2_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Fit_Resources2_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Fit_Resources2_A__c)=&quot;Disagree&quot;,25,0))))*(20/100))+
(IF(TEXT(Gate2_Fit_Resources3_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Fit_Resources3_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Fit_Resources3_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Fit_Resources3_A__c)=&quot;Disagree&quot;,25,0))))*(20/100))+
(IF(TEXT(Gate2_Fit_Resources4_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Fit_Resources4_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Fit_Resources4_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Fit_Resources4_A__c)=&quot;Disagree&quot;,25,0))))*(20/100))+
(IF(TEXT(Gate2_Fit_Resources5_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Fit_Resources5_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Fit_Resources5_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Fit_Resources5_A__c)=&quot;Disagree&quot;,25,0))))*(20/100)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_FIT_ResourcesGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_FIT_RiskGroupScore__c</fullName>
        <formula>(IF(TEXT(Gate2_Fit_Risk1_A__c)=&quot;Threat level4&quot;,100,IF(TEXT(Gate2_Fit_Risk1_A__c)=&quot;Threat level3&quot;,75,IF(TEXT(Gate2_Fit_Risk1_A__c)=&quot;Threat level2&quot;,25,0)))*(40/100))+ 
(IF(TEXT(Gate2_Fit_Risk2_A__c)=&quot;No exposure&quot;,100,IF(TEXT(Gate2_Fit_Risk2_A__c)=&quot;Moderate exposure&quot;,75,IF(TEXT(Gate2_Fit_Risk2_A__c)=&quot;High exposure&quot;,25,0)))*(40/100))+ 
(IF(TEXT(Gate2_Fit_Risk3_A__c)=&quot;In line with ABB&quot;,100,IF(TEXT(Gate2_Fit_Risk3_A__c)=&quot;Stricter than ABB&quot;,50,0))*(20/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_FIT_RiskGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_FIT_SafeIslandGS__c</fullName>
        <formula>((IF(TEXT(Gate2_FIT_Safe_Island_A__c)=&quot;Yes:Safe Island Classification in Place&quot;,100,IF(TEXT(Gate2_FIT_Safe_Island_A__c)=&quot;No:Safe Island Classification not in Place&quot;,25,0))*(50/100))+(IF(Gate2_Fit_Safe_Island_Classification_A__c=&quot;High-focus Customer&quot;,100,IF(Gate2_Fit_Safe_Island_Classification_A__c=&quot;Focus customer with required response&quot;,50,0))*(50/100)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_FIT_SafeIslandGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_FIT_SafeIslandGroupScore__c</fullName>
        <formula>GATE2_FIT_SafeIslandGS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_FIT_SafeIslandGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_FIT_StrategyGS__c</fullName>
        <formula>(IF(TEXT(Gate2_Fit_Strategy1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Fit_Strategy1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Fit_Strategy1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Fit_Strategy1_A__c) = &quot;Disagree&quot;,25,0))))*(50/100))+ 
(IF(TEXT(Gate2_Fit_Strategy2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Fit_Strategy2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Fit_Strategy2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Fit_Strategy2_A__c) = &quot;Disagree&quot;,25,0))))*(50/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_FIT_StrategyGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_FIT_StrategyGroupScore__c</fullName>
        <formula>GATE2_FIT_StrategyGS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_FIT_StrategyGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_GET_CategoryScore__c</fullName>
        <formula>(GATE2_GET_CustomerRelationGS__c * (20/100))+(GATE2_GET_CompetitionGS__c * (60/100))+(GATE2_GET_CompetitiveEdgeGroupScore__c * (20/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_GET_CategoryScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_GET_CompetitionGS__c</fullName>
        <formula>(IF(TEXT(Gate2_Get_Competition1_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Get_Competition1_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Get_Competition1_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Get_Competition1_A__c)=&quot;Disagree&quot;,25,0))))*(30/100))+
(IF(TEXT(Gate2_Get_Competition2_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Get_Competition2_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Get_Competition2_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Get_Competition2_A__c)=&quot;Disagree&quot;,25,0))))*(30/100))+
(IF(TEXT(Gate2_Get_Competition3_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Get_Competition3_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Get_Competition3_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Get_Competition3_A__c)=&quot;Disagree&quot;,25,0))))*(30/100))+
(IF(TEXT(Gate2_Get_Competition4_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Get_Competition4_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Get_Competition4_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Get_Competition4_A__c)=&quot;Disagree&quot;,25,0))))*(10/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_GET_CompetitionGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_GET_CompetitionGroupScore__c</fullName>
        <formula>GATE2_GET_CompetitionGS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_GET_CompetitionGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_GET_CompetitiveEdgeGroupScore__c</fullName>
        <formula>(IF(TEXT(Gate2_Get_Competitive_edge1_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Get_Competitive_edge1_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Get_Competitive_edge1_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Get_Competitive_edge1_A__c)=&quot;Disagree&quot;,25,0))))*(33.3333333333333/100))+
(IF(TEXT(Gate2_Get_Competitive_edge2_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Get_Competitive_edge2_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Get_Competitive_edge2_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Get_Competitive_edge2_A__c)=&quot;Disagree&quot;,25,0))))*(33.3333333333333/100))+
(IF(TEXT(Gate2_Get_Competitive_edge3_A__c)=&quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Get_Competitive_edge3_A__c)=&quot;Agree&quot;,75,IF(TEXT(Gate2_Get_Competitive_edge3_A__c)=&quot;Neutral&quot;,50,IF(TEXT(Gate2_Get_Competitive_edge3_A__c)=&quot;Disagree&quot;,25,0))))*(33.3333333333333/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_GET_CompetitiveEdgeGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_GET_CustomerRelationGS__c</fullName>
        <formula>(IF(TEXT(Gate2_Get_Customer_relation1_A__c)=&quot;Very good&quot;,100,IF(TEXT(Gate2_Get_Customer_relation1_A__c)=&quot;Good&quot;,75, IF(TEXT(Gate2_Get_Customer_relation1_A__c)=&quot;Difficult&quot;,25, 0)))*(50/100))+ 
(IF(TEXT(Gate2_Get_Customer_relation2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Get_Customer_relation2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Get_Customer_relation2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Get_Customer_relation2_A__c) = &quot;Disagree&quot;,25,0))))*(50/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_GET_CustomerRelationGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_GET_CustomerRelationGroupScore__c</fullName>
        <formula>GATE2_GET_CustomerRelationGS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_GET_CustomerRelationGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_WILL_BusinessValueGroupScore__c</fullName>
        <formula>((IF(TEXT(Gate2_Will_Business_value_and_bank1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_Business_value_and_bank1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_Business_value_and_bank1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_Business_value_and_bank1_A__c) = &quot;Disagree&quot;,25,0))))*(10/100))+ 
(IF(TEXT(Gate2_Will_Business_value_and_bank2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_Business_value_and_bank2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_Business_value_and_bank2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_Business_value_and_bank2_A__c) = &quot;Disagree&quot;,25,0))))*(80/100))+ 
(IF(TEXT(Gate2_Will_Business_value_and_bank3_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_Business_value_and_bank3_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_Business_value_and_bank3_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_Business_value_and_bank3_A__c) = &quot;Disagree&quot;,25,0))))*(10/100)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_WILL_BusinessValueGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_WILL_CategoryScore__c</fullName>
        <formula>(((IF(TEXT(Gate2_Will_EndUser1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_EndUser1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_EndUser1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_EndUser1_A__c) = &quot;Disagree&quot;,25,0))))*(50/100))+ 
(IF(TEXT(Gate2_Will_EndUser2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_EndUser2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_EndUser2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_EndUser2_A__c) = &quot;Disagree&quot;,25,0))))*(50/100)))*(10/100))+ 
(((IF(TEXT(Gate2_Will_Project_Development1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_Project_Development1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_Project_Development1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_Project_Development1_A__c) = &quot;Disagree&quot;,25,0))))*(90/100))+ 
(IF(TEXT(Gate2_Will_Project_Development2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_Project_Development2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_Project_Development2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_Project_Development2_A__c) = &quot;Disagree&quot;,25,0))))*(10/100)))*(50/100))+
(((IF(TEXT(Gate2_Will_Business_value_and_bank1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_Business_value_and_bank1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_Business_value_and_bank1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_Business_value_and_bank1_A__c) = &quot;Disagree&quot;,25,0))))*(10/100))+ 
(IF(TEXT(Gate2_Will_Business_value_and_bank2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_Business_value_and_bank2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_Business_value_and_bank2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_Business_value_and_bank2_A__c) = &quot;Disagree&quot;,25,0))))*(80/100))+
(IF(TEXT(Gate2_Will_Business_value_and_bank3_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_Business_value_and_bank3_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_Business_value_and_bank3_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_Business_value_and_bank3_A__c) = &quot;Disagree&quot;,25,0))))*(10/100)))*(40/100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_WILL_CategoryScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_WILL_EndUserGroupScore__c</fullName>
        <formula>((IF(TEXT(Gate2_Will_EndUser1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_EndUser1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_EndUser1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_EndUser1_A__c) = &quot;Disagree&quot;,25,0))))*(50/100))+ 
(IF(TEXT(Gate2_Will_EndUser2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_EndUser2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_EndUser2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_EndUser2_A__c) = &quot;Disagree&quot;,25,0))))*(50/100)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_WILL_EndUserGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GATE2_WILL_ProjDevelopGroupScore__c</fullName>
        <formula>((IF(TEXT(Gate2_Will_Project_Development1_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_Project_Development1_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_Project_Development1_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_Project_Development1_A__c) = &quot;Disagree&quot;,25,0))))*(90/100))+ 
(IF(TEXT(Gate2_Will_Project_Development2_A__c) = &quot;Strongly agree&quot;,100,IF(TEXT(Gate2_Will_Project_Development2_A__c) =&quot;Agree&quot;,75,IF(TEXT(Gate2_Will_Project_Development2_A__c) = &quot;Neutral&quot;,50,IF(TEXT(Gate2_Will_Project_Development2_A__c) = &quot;Disagree&quot;,25,0))))*(10/100)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GATE2_WILL_ProjDevelopGroupScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gate1_Fit_Resources_A__c</fullName>
        <description>R4 - This field refers to Gate1_Fit_Resources_A.</description>
        <label>6. Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes:Statement is True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No:Statement is False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>